AmplifireP2Base/main/default/objects/Food_Stand__c/Food_Stand__c.object-meta.xml
<CustomObject>
    <description>Represents a real-world food stand in a customer&apos;s cafeteria, which holds a selection of products that the customer&apos;s employees or guests can buy.</description>
    <label>Food Stand</label>
    <nameField>
        <displayFormat>Stand{00000}</displayFormat>
        <label>Food Stand Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Food Stands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>