AmplifireP2Base/main/default/objects/Food_Stand__c/fields/Item_List__c.field-meta.xml
<CustomField>
    <fullName>Item_List__c</fullName>
    <description>A listing of the items that are sold from this stand.</description>
    <inlineHelpText>A listing of the items that are sold from this stand.</inlineHelpText>
    <label>Item List</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>