AmplifireP2Base/main/default/objects/Food_Stand__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>The order that a customer placed that resulted in this Food Stand being set up.</description>
    <inlineHelpText>The order that a customer placed that resulted in this Food Stand being set up.</inlineHelpText>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Food Stands</relationshipLabel>
    <relationshipName>Food_Stands</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>