AmplifireP2Base/main/default/objects/Food_Stand__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of stand. Determines what food/beverages can be sold.</description>
    <inlineHelpText>The type of stand. Determines what food/beverages can be sold.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Rack</fullName>
                <default>true</default>
                <label>Open Rack</label>
            </value>
            <value>
                <fullName>Platter Tower</fullName>
            </value>
            <value>
                <fullName>Refrigerated Drink Rack</fullName>
            </value>
            <value>
                <fullName>Refrigerated Rack</fullName>
            </value>
            <value>
                <fullName>Freezer</fullName>
            </value>
            <value>
                <fullName>Cold Drink Dispenser</fullName>
            </value>
            <value>
                <fullName>Hot Drink Dispenser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>